Fix pipe cmd error.